chore: migrate to Java 25 (LTS) and finalize high-performance architecture
- Upgrade project baseline to Java 25 and enable necessary preview features.
- Replace heap-based distance matrices with FFM API (MemorySegment) for
  off-heap efficiency and long-addressing support.
- Migrate StructuredTaskScope implementation to the finalized Java 25
  interface and Joiner-based API.
- Optimize PopulationEvaluator using batching to reduce virtual thread
  allocation overhead and GC pressure.
- Refactor all Local Search Optimizers to utilize ValueLayout for
  high-speed off-heap memory lookups.
- Refine Vector API (SIMD) loops in TSPCostCalculator for better masking
  and alignment.